Fixed bug #36345 (PDO/MySQL problem loading BLOB over 1MB).